# slang

./: .gitignore  PREVIEW.md
.claude/: wf-backend-fanout.js  wf-depth-expand.js  wf-expand-deep.js  wf-expand-variants.js  wf-fanout-expand.js  wf-whitebox-coverage.js
.github/workflows/: ci-slang-coverage.yml  ci.yml
coverage/: index.html
coverage/coverage/home/runner/work/slang/slang/include/: slang-com-helper.h.html  slang-com-ptr.h.html  slang.h.html
coverage/coverage/home/runner/work/slang/slang/source/compiler-core/: slang-artifact-associated-impl.cpp.html  slang-artifact-associated-impl.h.html  slang-artifact-associated.h.html  slang-artifact-container-util.cpp.html  slang-artifact-desc-util.cpp.html  slang-artifact-desc-util.h.html  slang-artifact-diagnostic-util.cpp.html  slang-artifact-handler-impl.cpp.html  slang-artifact-handler-impl.h.html  slang-artifact-helper.cpp.html  slang-artifact-helper.h.html  slang-artifact-impl.cpp.html  slang-artifact-impl.h.html  slang-artifact-representation-impl.cpp.html  slang-artifact-representation-impl.h.html  slang-artifact-util.cpp.html  slang-artifact.h.html  slang-command-line-args.cpp.html  slang-command-line-args.h.html  slang-core-diagnostics.cpp.html  slang-diagnostic-sink.cpp.html  slang-diagnostic-sink.h.html  slang-doc-extractor.cpp.html  slang-doc-extractor.h.html  slang-downstream-compiler-set.cpp.html  slang-downstream-compiler-set.h.html  slang-downstream-compiler-util.cpp.html  slang-downstream-compiler-util.h.html  slang-downstream-compiler.cpp.html  slang-downstream-compiler.h.html  slang-dxc-compiler.cpp.html  slang-fxc-compiler.cpp.html  slang-gcc-compiler-util.cpp.html  slang-gcc-compiler-util.h.html  slang-glslang-compiler.cpp.html  slang-include-system.cpp.html  slang-include-system.h.html  slang-json-diagnostics.cpp.html  slang-json-lexer.cpp.html  slang-json-lexer.h.html  (+38 more)
coverage/coverage/home/runner/work/slang/slang/source/core/: slang-allocator.h.html  slang-archive-file-system.cpp.html  slang-array-view.h.html  slang-array.h.html  slang-blob-builder.cpp.html  slang-blob-builder.h.html  slang-blob.cpp.html  slang-blob.h.html  slang-byte-encode-util.cpp.html  slang-byte-encode-util.h.html  slang-castable.cpp.html  slang-castable.h.html  slang-char-encode.cpp.html  slang-char-encode.h.html  slang-char-util.cpp.html  slang-char-util.h.html  slang-com-object.h.html  slang-command-line.cpp.html  slang-command-line.h.html  slang-command-options-writer.cpp.html  slang-command-options-writer.h.html  slang-command-options.cpp.html  slang-command-options.h.html  slang-common.h.html  slang-crypto.cpp.html  slang-crypto.h.html  slang-deflate-compression-system.cpp.html  slang-dictionary.h.html  slang-exception.h.html  slang-file-system.cpp.html  slang-file-system.h.html  slang-free-list.cpp.html  slang-free-list.h.html  slang-func-ptr.h.html  slang-hash.h.html  slang-hex-dump-util.cpp.html  slang-http.cpp.html  slang-http.h.html  slang-implicit-directory-collector.cpp.html  slang-implicit-directory-collector.h.html  (+68 more)
coverage/coverage/home/runner/work/slang/slang/source/slang-core-module/: slang-embedded-core-module-source.cpp.html  slang-embedded-core-module.cpp.html
examples/: CMakeLists.txt
examples/hello-world-metal/: README.md  main.cpp  metal-api.h  metal-api.mm
examples/shader-coverage-binding-demo/: CMakeLists.txt  README.md  app.slang  main.cpp  math.slang  physics.slang
examples/shader-coverage-demo/: README.md
examples/shader-coverage-slang-rhi-demo/: CMakeLists.txt  README.md  main.cpp  math.slang
extras/: compile-sascha-willems-shaders.sh
extras/slang-test-gen/: QUICK_START.md  README.md  slang-test-gen.py
extras/slang-test-gen/schema/: test-config.schema.yaml
include/: slang.h
source/slang/: slang-diagnostics.lua  slang-emit.cpp  slang-ir-any-value-inference.cpp  slang-ir-coverage-instrument.cpp  slang-ir-insts-stable-names.lua  slang-ir-insts.h  slang-ir-insts.lua  slang-ir-lower-dynamic-dispatch-insts.cpp  slang-ir-translate.cpp  slang-ir-typeflow-specialize.cpp
tests/bugs/: gh-10394.slang
tests/gen-tests/: metal-texture-capabilities.yaml  metal-texture-test-shader.slang  multi-backend-compute-shader.slang  multi-backend-compute.yaml
tests/gen-tests/capability/texture-types/: gen-texture-types-metal-depthtexture2d.slang  gen-texture-types-metal-rasterizer_ordered_texture2d.slang  gen-texture-types-metal-rwtexture2d.slang  gen-texture-types-metal-texture1d.slang  gen-texture-types-metal-texture2d.slang  gen-texture-types-metal-texture2dms.slang  gen-texture-types-metal-texture3d.slang  gen-texture-types-metal-texturecube.slang  gen-texture-types-metal-wtexture2d.slang
tests/gen-tests/compute/: gen-compute-cpu.slang  gen-compute-cuda.slang  gen-compute-metal.slang  gen-compute-vulkan.slang
tests/language-feature/coverage/: coverage-late-materialization-ir.slang
tests/language-feature/dynamic-dispatch/: diagnose-circular-array.slang  diagnose-circular-conformance.slang  diagnose-circular-indirect.slang  diagnose-circular-nested-struct.slang  diagnose-circular-no-anyvaluesize.slang  diagnose-circular-optional.slang
tools/coverage/: coverage-floor.py  run-generated-coverage.sh  run-history-11421.sh  run-history.sh
tools/issue-analysis/: ANALYZE_RESULTS_PLAN.md  README.md  analyze_issue_sources.py  generate_html.py
tools/shader-coverage/: README.md
tools/slang-unit-test/: unit-test-coverage-tracing-metadata.cpp
(+401 files in other folders)
